--- a/data_bike/templates/home.html
+++ b/data_bike/templates/home.html
@@ -55,7 +55,7 @@
                     <!-- ============================================================== -->
                     <!-- Logo -->
                     <!-- ============================================================== -->
-                    <a class="navbar-brand" href="https://amorcecian.pythonanywhere.com/home/">
+                    <a class="navbar-brand" href="https://amorcecian.pythonanywhere.com/home">
                         <!-- Logo icon -->
                         <img src="{{ url_for('static', filename='assets/images/logoDataBike.png') }}"
                             class="light-logo logo" alt="logo" />
@@ -111,7 +111,7 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                                href="https://amorcecian.pythonanywhere.com/home/" aria-expanded="false"><i
+                                href="https://amorcecian.pythonanywhere.com/home" aria-expanded="false"><i
                                     class="mdi mdi-home"></i><span class="hide-menu">Home</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark"
                                 href="javascript:void(0)" aria-expanded="false"><i
@@ -167,7 +167,6 @@
     <script src="{{ url_for('static', filename='js/external/jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/powerbi.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>
 
     <!--Menu sidebar -->
