--- a/data_bike/templates/home.html
+++ b/data_bike/templates/home.html
@@ -38,8 +38,8 @@
             height: 600px;
         }
 
-        .report-container{
-            height: 600px;
+        #reportContainer {
+            height: 6800px;
         }
     </style>
 </head>
@@ -145,12 +145,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card">
-                            <div class="card-body">
-                                <section class="report-container">
-                                    <iframe width="100%" height="700"
-                                    src="https://app.powerbi.com/view?r=eyJrIjoiMTE1MjEzODItYWMwNy00YjJlLWE1MTItMWYzZjgxNjQzYjk3IiwidCI6IjE5NGFkMDc2LWU4MDQtNGJhMy1hODI1LThiZGYxMWY1Nzg0YiJ9"
+                            <div class="card-body" id="reportContainer">
+
+                                <iframe width="100%" height="700"
+                                    src="https://app.powerbi.com/view?r=eyJrIjoiMTE1MjEzODItYWMwNy00YjJlLWE1MTItMWYzZjgxNjQzYjk3IiwidCI6IjE5NGFkMDc2LWU4MDQtNGJhMy1hODI1LThiZGYxMWY1Nzg0YiJ9&pageName=3"
                                     frameborder="0" allowFullScreen="true"></iframe>
-                                </section>
+
                             </div>
                         </div>
                     </div>
