New Home Dashboard

--- a/data_bike/templates/home.html
+++ b/data_bike/templates/home.html
@@ -148,7 +148,7 @@
                             <div class="card-body" id="reportContainer">
 
                                 <iframe width="100%" height="700"
-                                    src="https://app.powerbi.com/view?r=eyJrIjoiMTE1MjEzODItYWMwNy00YjJlLWE1MTItMWYzZjgxNjQzYjk3IiwidCI6IjE5NGFkMDc2LWU4MDQtNGJhMy1hODI1LThiZGYxMWY1Nzg0YiJ9&pageName=3"
+                                    src="https://app.powerbi.com/view?r=eyJrIjoiYWRiNWFkNDctOWI3Ny00NGQxLTkwOWUtOWFjNmY4ZWY4MDUzIiwidCI6IjE5NGFkMDc2LWU4MDQtNGJhMy1hODI1LThiZGYxMWY1Nzg0YiJ9"
                                     frameborder="0" allowFullScreen="true"></iframe>
 
                             </div>
