--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -319,6 +319,7 @@
 
 
     <script lang="javascript">
+        var $idReport = 1;
         $(document).ready(function () {
 
             $(".btn-simular").click(function () {
