--- a/data_bike/templates/dashboard2.html
+++ b/data_bike/templates/dashboard2.html
@@ -307,7 +307,7 @@
     <script src="{{ url_for('static', filename='js/external/jquery-3.4.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/powerbi.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/index2.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script src="{{ url_for('static', filename='js/external/custom.min.js') }}"></script>
 
     <!--Menu sidebar -->
@@ -319,6 +319,7 @@
 
 
     <script lang="javascript">
+        var $idReport = 2;
         $(document).ready(function () {
 
             $(".btn-simular").click(function () {
