--- a/data_bike/templates/dashboard1.html
+++ b/data_bike/templates/dashboard1.html
@@ -198,12 +198,12 @@
             <div class="page-breadcrumb">
                 <div class="row">
                     <div class="col-12 d-flex no-block align-items-center">
-                        <h4 class="page-title">Dashboard 1</h4>
+                        <h4 class="page-title">Estaciones</h4>
                         <div class="ml-auto text-right">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="https://amorcecian.pythonanywhere.com/home">Home</a></li>
-                                    <li class="breadcrumb-item active" aria-current="page">Dashboard 1</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Estaciones</li>
                                 </ol>
                             </nav>
                         </div>
