--- a/data_bike/templates/dashboard2.html
+++ b/data_bike/templates/dashboard2.html
@@ -172,10 +172,10 @@
                                     class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboards </span></a>
                             <ul aria-expanded="false" class="collapse  first-level">
                                 <li class="sidebar-item"><a href="dashboard1" class="sidebar-link"><i
-                                            class="mdi mdi-chart-bar"></i><span class="hide-menu"> Dashboard 1
+                                            class="mdi mdi-chart-bar"></i><span class="hide-menu"> Estaciones
                                         </span></a></li>
                                 <li class="sidebar-item"><a href="dashboard2" class="sidebar-link"><i
-                                            class="mdi mdi-chart-areaspline"></i><span class="hide-menu"> Dashboard 2
+                                            class="mdi mdi-chart-areaspline"></i><span class="hide-menu"> Clusters
                                         </span></a></li>
                             </ul>
                         </li>
