--- a/data_bike/templates/dashboard2.html
+++ b/data_bike/templates/dashboard2.html
@@ -165,8 +165,8 @@
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav" class="p-t-30">
                         <li class="sidebar-item"> <a class="sidebar-link waves-effect waves-dark sidebar-link"
-                                href="https://amorcecian.pythonanywhere.com/home" aria-expanded="false"><i class="mdi mdi-home"></i><span
-                                    class="hide-menu">Home</span></a></li>
+                                href="https://amorcecian.pythonanywhere.com/home" aria-expanded="false"><i
+                                    class="mdi mdi-home"></i><span class="hide-menu">Home</span></a></li>
                         <li class="sidebar-item"> <a class="sidebar-link has-arrow waves-effect waves-dark"
                                 href="javascript:void(0)" aria-expanded="false"><i
                                     class="mdi mdi-view-dashboard"></i><span class="hide-menu">Dashboards </span></a>
@@ -202,7 +202,8 @@
                         <div class="ml-auto text-right">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb">
-                                    <li class="breadcrumb-item"><a href="https://amorcecian.pythonanywhere.com/home">Home</a></li>
+                                    <li class="breadcrumb-item"><a
+                                            href="https://amorcecian.pythonanywhere.com/home">Home</a></li>
                                     <li class="breadcrumb-item active" aria-current="page">Clusters</li>
                                 </ol>
                             </nav>
@@ -278,11 +279,6 @@
                             <div class="col-sm-9">
                                 <select id="fcluster" name="fcluster" class="form-control custom-select selectFormato"
                                     required>
-                                    <option disable selected></option>
-                                    <option value="2">1</option>
-                                    <option value="1">2</option>
-                                    <option value="15">15</option>
-                                    <option value="18">18</option>
                                 </select>
                             </div>
                         </div>
@@ -312,15 +308,18 @@
 
     <!--Menu sidebar -->
     <script src="{{ url_for('static', filename='js/external/sidebarmenu.js') }}"></script>
-    
-    <script src="{{ url_for('static', filename='assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='assets/libs/jquery-validation/dist/jquery.validate.min.js') }}"></script>
+
+    <script
+        src="{{ url_for('static', filename='assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js') }}"></script>
+    <script
+        src="{{ url_for('static', filename='assets/libs/jquery-validation/dist/jquery.validate.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/libs/jquery-confirm/jquery-confirm.min.js') }}"></script>
 
 
     <script lang="javascript">
         var $idReport = 2;
         $(document).ready(function () {
+            cargarClusters();
 
             $(".btn-simular").click(function () {
                 $('#Modal2').modal('show');
@@ -380,7 +379,30 @@
                 });
             });
 
+            $("#Modal2").on("hidden.bs.modal", function () {
+                $('#frm').trigger("reset");
+                var validator = $("#frm").validate();
+                validator.resetForm();
+            });
+
         });
+
+        function cargarClusters() {
+            $("#fcluster").empty();
+            $('#fcluster').append('<option disable selected></option>');
+            $.ajax({
+                type: "GET",
+                url: "https://amorcecian.pythonanywhere.com/retrieve_clusters",
+                success: function (response) {
+                    console.log(response);
+                    var data = $.parseJSON(response);
+                    console.log(data);
+                    $.each(data, function (key, value) {
+                        $('#fcluster').append('<option value="' + value + '">' + value + '</option>');
+                    });
+                }
+            })
+        }
     </script>
 
 
